--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
   <head>
     <title>Calendar</title>
     <script type="text/javascript" src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./style/style.css" />
   </head>
   <body>
-    <div id="calendar">
-      <p id="calendar-day"></p>
-      <p id="calendar-date"></p>
-      <p id="calendar-month-year"></p>
+    <div class="calendar-container">
+      <div id="weeknum"></div>
+      <div id="weekday"></div>
+      <div id="day"></div>
+      <div id="full-date"></div>
+      <div id="month"></div>
+      <div id="year"></div>
+    </div>
+    <div class="frame">
+      <div class="week">
+        <div class="day">19</div>
+        <div class="day">20</div>
+        <div class="day">21</div>
+        <div class="day">22</div>
+        <div class="day">23</div>
+        <div class="day">24</div>
+        <div class="day">25</div>
+      </div>
     </div>
   </body>
 </html>
