--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
   </head>
   <body>
+    <div class="calendar"></div>
     <div class="calendar-container">
       <div id="weeknum"></div>
       <div id="weekday"></div>
@@ -13,17 +14,6 @@
       <div id="full-date"></div>
       <div id="month"></div>
       <div id="year"></div>
-    </div>
-    <div class="frame">
-      <div class="week">
-        <div class="day">19</div>
-        <div class="day">20</div>
-        <div class="day">21</div>
-        <div class="day">22</div>
-        <div class="day">23</div>
-        <div class="day">24</div>
-        <div class="day">25</div>
-      </div>
     </div>
   </body>
 </html>
