added date functions

--- a/index.html
+++ b/index.html
@@ -6,14 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
   </head>
   <body>
+    <div class="calendarHelp"></div>
     <div class="calendar"></div>
-    <div class="calendar-container">
-      <div id="weeknum"></div>
-      <div id="weekday"></div>
-      <div id="day"></div>
-      <div id="full-date"></div>
-      <div id="month"></div>
-      <div id="year"></div>
-    </div>
   </body>
 </html>
