changed logic for writing to DOM

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Calendar</title>
+    <script type="text/javascript" src="clusterize.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
   </head>
   <body>
-    <div class="calendarHelp"></div>
     <div class="calendar"></div>
   </body>
 </html>
