--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
   <head>
     <title>Calendar</title>
-    <script type="text/javascript" src="clusterize.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
   </head>
   <body>
+    <div id="loading">
+      <h1>
+        Loading...
+      </h1>
+      <p>TODO:</p>
+      <p>- speed up loading time</p>
+      <p>- append, prepend n weeks</p>
+      <p>- scroll to date</p>
+      <p>- get selected date</p>
+    </div>
     <div class="calendar"></div>
   </body>
 </html>
