--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
-    <div id="loading">
-      <h1>
-        Loading...
-      </h1>
-      <p>TODO:</p>
-      <p>- speed up loading time</p>
-      <p>- append, prepend n weeks</p>
-      <p>- scroll to date</p>
-      <p>- get selected date</p>
-    </div>
-    <div class="calendar"></div>
     <div id="scrollArea" class="clusterize-scroll">
       <div id="contentArea" class="clusterize-content">
-        <div class="clusterize-no-data">Loading data…</div>
+        <div class="clusterize-no-data">
+          <h1>
+            Loading...
+          </h1>
+          <p>TODO:</p>
+          <p>- speed up loading time</p>
+          <p>- append, prepend n weeks</p>
+          <p>- scroll to date</p>
+          <p>- get selected date</p>
+        </div>
       </div>
     </div>
   </body>
